# garcon

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
docs/: MODEL.md  SAFETY.md  SKILLS.md
docs/plans/: 2026-06-02-001-feat-v1-write-skills-plan.md  2026-06-02-002-feat-v2-slm-router-plan.md  2026-06-02-003-feat-code-review-improvements-plan.md  2026-06-02-004-feat-v2-linux-commands-agent-loop-plan.md
fine_tuning/: sft_nl2bash.ipynb
garcon/: cli.py  executor.py  logger.py  model_manager.py  model_router.py  parser.py  router.py  safety.py  schema.py  undo.py
garcon/commands/: __init__.py  archive.py  base.py  content.py  file_ops.py  permissions.py  register_all.py  safety.py  safety_rules.py  search.py  text.py
garcon/skills/: base.py  compress_files.py  extract_archive.py  find_large_files.py  list_files.py  organize_files.py  read_file.py  rename_files.py  search_text.py
scripts/: convert_trace_to_dataset.py  generate_training_data.py
tests/: test_cli_v2.py  test_executor.py  test_logger.py  test_model_manager.py  test_model_router.py  test_model_router_v2.py  test_parser.py  test_router.py  test_router_v2.py  test_safety.py  test_schema.py  test_skill_compress_files.py  test_skill_extract_archive.py  test_skill_find_large_files.py  test_skill_list_files.py  test_skill_organize_files.py  test_skill_read_file.py  test_skill_rename_files.py  test_skill_search_text.py  test_skills.py  test_undo_v2.py
tests/test_commands/: test_mutating.py  test_read_only.py  test_registry.py  test_safety.py
