[project]
name = "garcon"
version = "0.1.0"
description = "Tiny local terminal coworker — routes Korean natural language to safe local skills"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
garcon = "garcon.cli:app"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
